Changed database.yml and added gems for Heroku deployment

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,11 @@
+cat config/database.yml
+
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: 5
 development:
   adapter: postgresql
   database: db/database_development
